# argument-clinic

./: .gitignore  README.md  cycle_stack.sh  docker-compose.yml  system-architecture-diagram.md
backend/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
backend/src/: __init__.py  config.py  main.py  performance.py
backend/src/core/: observability.py
backend/src/models/: __init__.py  argument.py
backend/src/routes/: __init__.py  websocket.py
backend/src/services/: __init__.py  argument_clinic_graph.py  voice_service.py
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: AudioPlayer.tsx  VoiceRecorder.tsx
frontend/src/hooks/: useVoiceRecorder.tsx
