[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "argument-clinic"
version = "2.0.0"
description = "A real-time AI recreation of Monty Python's Argument Clinic using FastAPI and Pydantic AI"
readme = "README.md"
authors = [
    {name = "Argument Clinic Team"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-ai==0.0.14",
    "pydantic-graph==0.1.7",
    "opentelemetry-api>=1.34.0",
    "python-multipart==0.0.12",
    "python-dotenv==1.0.1",
    "httpx==0.28.1",
    "aiofiles==24.1.0",
    "websockets==13.1",
    "openai==1.57.2",
    "anthropic==0.40.0",
    "google-generativeai==0.8.3",
    "google-cloud-texttospeech==2.18.0",
    "google-cloud-speech==2.28.0",
    "elevenlabs==2.5.0",
    "requests==2.32.3",
    "numpy==2.2.0",
    "python-dateutil==2.9.0.post0",
    "pydantic-settings>=2.10.1",
    "opentelemetry-sdk>=1.34.1",
    "opentelemetry-exporter-jaeger>=1.21.0",
    "deprecated>=1.2.18",
    "opentelemetry-instrumentation>=0.55b1",
    "opentelemetry-instrumentation-fastapi>=0.55b1",
    "opentelemetry-instrumentation-httpx>=0.55b1",
    "opentelemetry-instrumentation-logging>=0.55b1",
    "opentelemetry-exporter-otlp>=1.15.0",
]

[tool.hatch.build.targets.wheel]
    packages = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy"
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
